--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -103,3 +103,161 @@ font-size: 1.2em;
     .image-trois{
         position: relative;
         left: -80%;}
+        
+.section3{
+    
+    background-image: url("../Illustrations/Home/Batslider1.png");
+    background-repeat: no-repeat;
+    background-size: 100%;
+    height: 600px;
+    display: none;
+}
+.section7 img{
+    width: 100%;
+    height: 600px;
+
+}
+
+
+
+/* MULTIMEDIA */
+.section6{
+    height: 500px;
+}
+
+.section6 .container {
+    color: #fff;
+}
+
+.section6 button {
+    position: relative;
+    top: 150px;
+    background-color: transparent;
+    border: none;
+}
+
+.section6 button.right {
+    right: -92.5%
+}
+
+.section6 .slider-media {
+    display: none;
+}
+
+.section6 .carte-slider-top {
+    margin: 1rem auto;
+    display: flex;
+    justify-content: space-between;
+    max-height: 300px;
+}
+
+.section6 .carte-slider {
+    margin: 1rem auto;
+    display: flex;
+    width: 60%;
+    max-height: 300px;
+}
+
+ .section6 .carte-body {
+    padding: 10px;
+    width: 80%;
+    background: linear-gradient(135deg, rgba(237, 222, 191, 0.4), rgba(25, 88, 125, 0.4) 60%);
+    border-top-right-radius: 1.5rem;
+    border-bottom-right-radius: 1.5rem;
+}
+
+.carte-img {
+    width: 30%;
+}
+
+.section6 .carte-img img {
+    width: 100%;
+    height: 100%;
+}
+
+.section6 .carte-body h2 {
+    font-family: 'space-grotesk';
+    font-size: 12px;
+    color: #bcbcbc;
+    font-weight: bold;
+}
+
+.section6 span.subtitle {
+    font-size: 22px;
+}
+
+.section6 .carte-body p {
+    font-size: 12px;
+}
+
+.section6 .carte-body span.source {
+    font-weight: bold;
+}
+
+.section6 iframe {
+    aspect-ratio: 16/9;
+    height: 100%;
+    width: 100%;
+}
+
+ iframe:hover {
+    box-shadow: 0px 0px 2rem white;
+}
+.section7 img{
+    display: none;
+}
+.inputform{
+    font-size: 20px;
+    width: 100%;
+    background:none;
+    border-top: none;
+    border-left: none;
+    border-right: none;
+    border-color: white;
+   
+}
+.select, .souhait{
+    padding-top: 20px;
+}
+.label{
+    font-size: 20px;
+}
+.confirm{
+    width: 150px;
+    text-align: center;
+    margin: 10px;
+    padding: 10px;
+    background-color: #7b5c5c;
+}
+/* avant footer*/
+.para1, .para2{
+    font-size: 20px;
+    text-align: center;
+    
+}
+.img1{
+    text-align: start;
+}
+.img2{
+    text-align: right;
+}
+#confirmation{
+    margin-left: 40%;
+
+}
+.para1{
+    font-weight: bolder;
+    color: #ffffff;
+}
+.para2{
+    color: #263c48ce;
+}
+.circle{
+    border: solid 1px #19587d;
+    border-radius: 50%;
+    width:0.5rem;
+    height: 0.5rem;
+    margin:5px;
+}
+footer{
+    padding: 20px;}
